# speaker-attribution

./: .env.example  .gitignore  CLAUDE.md  README.md  experiment.html  leak_sweep.html  meeting_live.html  meeting_nearlive.html  pyproject.toml
archive/offshelf/: live_mic.py  live_mic_deepgram.py  make_ami_gated.py  make_test_audio.py  meeting_server.py  run_moonshine.py  run_parakeet_mlx.py  transcribe_meeting.py  transcribe_meeting_nearlive.py
docs/: HANDOFF.md  LANDSCAPE.md  RESEARCH_LOG.md  SUMMARY.md  TRY_OFFSHELF.md
offshelf/: live_soniox.py  make_gated_channels.py  make_leaked_channels.py  run_deepgram_multichannel.py  run_faster_whisper.py  run_parakeet_mlx_stream.py  transcribe_meeting_live.py  transcribe_meeting_nearlive.py
scripts/: accuracy_report.py  ami_report.py  demo_synth.py  eval_ami.py  eval_leak_sweep.py  eval_librispeech.py  eval_phone.py  eval_separation.py  eval_single_vs_multi.py  eval_streaming.py  eval_streaming_gate.py  experiment.py  fetch_samples.py  transcribe.py  transcribe_report.py  visualize.py
src/spkattr/: __init__.py  asr.py  cancel.py  crosstalk.py  embedding.py  evaluate.py  pipeline.py  streaming.py  synth.py  vad.py
tests/: test_pipeline.py
