[project]
name = "speaker-attribution"
version = "0.1.0"
description = "1人1マイク環境で、漏れ込み(クロストーク)を除去し各発話を持ち主に正しく帰属させる研究プロジェクト"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "librosa>=0.10",
    "resemblyzer>=0.1.4",
    "torch>=2.0",
    "openai-whisper>=20231117",
    "parakeet-mlx>=0.5.2",
    "sounddevice>=0.5.5",
    "mlx-whisper>=0.4.3",
    "aiohttp>=3.14.1",
    "websockets>=16.0",
    "speechbrain>=1.1.0",
    "torchaudio>=2.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# LibriSpeech等の公式トランスクリプト付きデータ取得・読み込み用
data = [
    "huggingface_hub>=0.20",
    "pyarrow>=14",
]

[tool.uv]
# CPU版torchを使う(CUDAの巨大wheelを避ける)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spkattr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
